<resources>
    <string name="app_name">Cards</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>

    <!-- DECK_LIST  -->
    <string name="deck_list_title">Decks</string>
    <string name="deck_add_msg">New deck has been added</string>
    <string name="deck_delete_msg">The deck has been deleted</string>
    <string name="deck_delete_question">Are you sure?</string>
    <string name="deck_delete_title">Deck deletion</string>
    <string name="deck_add_subt">Enter the name of the deck</string>
    <string name="deck_add_title">Add deck</string>

    <!-- CARD_LIST  -->
    <string name="card_list_title">Deck</string>
    <string name="card_delete_msg">The card has been deleted</string>
    <string name="card_delete_question">Are you sure?</string>
    <string name="card_delete_title">Card deletion</string>
    <string name="card_delete_option">Delete</string>
    <string name="card_edit_option">Edit</string>
    <string name="study_button">Begin study session</string>

    <!-- EDIT  -->
    <string name="edit_card_title">Edit card</string>
    <string name="edit_card_msg">Card edited</string>

    <!-- SHOW  -->
    <string name="show_card_title">Study session</string>
    <string name="show_card_cards_left">Cards completed: </string>
    <string name="no_cards_study_msg">There aren\'t any more cards to study today</string>


    <!-- ADD  -->
    <string name="card_add_title">Add Card</string>


    <!-- SHOW  -->
    <string name="answer_button_text">Check answer</string>
    <string name="hard_button_title">Difficult</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="easy_button_title">Easy</string>


    <string name="card_date_label">Date</string>
    <string name="card_question_label">Question</string>
    <string name="card_question_hint">Input the text of the question</string>
    <string name="card_answer_label">Answer</string>
    <string name="card_answer_hint">Input the text of the answer</string>


    <!-- ACTION BAR -->
    <string name="menu_more_button">More</string>
    <string name="menu_stats_button">Stats</string>


    <!-- LOGIN  -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_logout_button">Logout</string>
    <string name="remember_me_login">Remember me</string>
    <string name="max_tarjetas_text">Max number of cards per session</string>
    <string name="activate_blackboard">Blackboard mode</string>
    <string name="menu_settings_button">Settings</string>
    <string name="action_register">Register</string>
    <string name="deck_stats_name_label">Deck:</string>
    <string name="deck_stats_n_easy">Number of easy responses</string>
    <string name="deck_stats_n_easy_label">Number of easy responses</string>
    <string name="deck_stats_n_hard">Number of hard responses</string>
    <string name="deck_stats_n_hard_label">Number of hard responses</string>
    <string name="deck_stats_n_doubt">Number of doubt responses</string>
    <string name="deck_stats_n_doubt_label">Number of doubt responses</string>
    <string name="register_error">Error, register could not be completed</string>
    <string name="register_success">User registered, login now</string>
    <string name="login_success">"Logged as user: "</string>
    <string name="login_error">Incorrect user or password</string>
    <string name="name_app">Cards</string>
    <string name="card_stats_label">Stats</string>
    <string name="label_hard">Hard</string>
    <string name="label_easy">Easy</string>
    <string name="label_doubt">Doubt</string>
    <string name="graph_label">Difficulty</string>
    <string name="deck_stats_n_cards_label">Total number of cards</string>


</resources>