<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="10dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp">
    <TextView

        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/show_card_title"
        />

    <TextView
        android:id="@+id/card_count"
        android:layout_below="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        />


    <TextView

        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"


        />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_below="@id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:visibility="gone"
        />

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/answer_button"
        android:layout_below="@id/answer_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_button_text" />


    <LinearLayout
        android:id="@+id/difficulty_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:visibility="invisible">

        <Button
            android:id="@+id/hard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_button_title"
            android:backgroundTint="@android:color/holo_red_light">
        </Button>

        <Button
            android:id="@+id/doubt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doubt_button_title"
            android:backgroundTint="@android:color/holo_blue_light">
        </Button>

        <Button
            android:id="@+id/easy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_button_title"
            android:backgroundTint="@android:color/holo_green_light">
        </Button>
    </LinearLayout>
</RelativeLayout>

